--- a/Chrome/_locales/hu/messages.json
+++ b/Chrome/_locales/hu/messages.json
@@ -1,16 +1,11 @@
 {
 	"extName": {
-		"message": "SG PlusPlus",
+		"message": "SG++",
 		"description": "Full name of the extension"
 	},
 
-	"extShortName": {
-		"message": "SG++",
-		"description": "Short name of the extension"
-	},
-
 	"extDescription": {
-		"message": "SG Redesign",
+		"message": "Továbbfejlesztett kinézet, jövöbeli extra funkciók az SG.hu oldalon.",
 		"description": "Description of the extension"
 	},
 
