Updated Firefox locales and extension details

--- a/Firefox/locale/hu.properties
+++ b/Firefox/locale/hu.properties
@@ -1,11 +1,8 @@
 # Full name of the extension
-extName = SG PlusPlus
-
-# Short name of the extension
-extShortName = SG++
+extName = SG++
 
 # Description of the extension
-extDescription = SG Redesign
+extDescription = Továbbfejlesztett kinézet, jövöbeli extra funkciók az SG.hu oldalon.
 
 # Author(s) of the extension
 extAuthor = Viszt Péter (passatgt), Gera János (Ability)
