--- a/Firefox/locale/en.properties
+++ b/Firefox/locale/en.properties
@@ -1,8 +1,5 @@
 # Full name of the extension
-extName = SG PlusPlus
-
-# Short name of the extension
-extShortName = SG++
+extName = SG++
 
 # Description of the extension
 extDescription = Provides enhanced appearance for the popular Hungarian website SG.hu.
